@@ -32,6 +32,7 @@
   <!ENTITY requirements.xml SYSTEM "requirements.xml">
   <!ENTITY concepts.xml SYSTEM "concepts.xml">
   <!ENTITY idb-api.xml SYSTEM "idb-api.xml">
+  <!ENTITY user-api.xml SYSTEM "user-api.xml">
 ]>
 <book>
  <bookinfo>
@@ -52,6 +53,7 @@
  &requirements.xml;
  &concepts.xml;
  &idb-api.xml;
+ &user-api.xml;
 
 </book>
 
